Modularization firehose first pass