@@ -7,15 +7,18 @@ buildscript {
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0'
     }
 }
-
 plugins {
+    id 'java-library'
     id 'org.ajoberstar.grgit' version '2.1.0'
-    //id 'com.zyxist.chainsaw' version '0.1.3'
-    id 'com.github.johnrengelman.shadow' version '2.0.2'
+    id 'com.github.johnrengelman.shadow' version '4.0.4'
+    id "de.jjohannes.extra-java-module-info" version "0.1"
 }
 
-apply plugin: 'java'
-apply plugin: 'application'
+java {
+    modularity.inferModulePath.set(true)
+}
+
+apply plugin: 'java-library'
 apply plugin: 'eclipse'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'org.junit.platform.gradle.plugin'
@@ -24,20 +27,6 @@ targetCompatibility = targetJavaVersion
 
 logger.warn("target java version: " + targetCompatibility)
 logger.warn("source java version: " + sourceCompatibility)
-
-sourceSets {
-    main {
-        java {
-            if(targetCompatibility != JavaVersion.VERSION_11)
-                exclude '**/module-info.java'
-        }
-    }
-}
-
-task sourceJar(type: Jar, dependsOn: classes) {
-    classifier 'sources'
-    from sourceSets.main.allSource
-}
 
 import org.gradle.plugins.ide.eclipse.model.AccessRule
 
@@ -51,10 +40,6 @@ eclipse {
         }
     }
 }
-    
-
-//if(targetCompatibility != JavaVersion.VERSION_1_8)
-//    javaModule.name = 'gov.gsa.pivconformance'
 
 repositories {
     jcenter()
@@ -69,67 +54,69 @@ configurations {
 }
 
 dependencies {
-    compile 'org.bouncycastle:bcprov-jdk15on:1.64+'
-    compile 'org.bouncycastle:bcpkix-jdk15on:1.64+'
-    compile 'org.bouncycastle:bcprov-ext-jdk15on:1.64+'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
+    implementation 'org.bouncycastle:bcprov-ext-jdk15on:1.66'
 
-    compile 'commons-cli:commons-cli:1.4'
-    compile 'commons-codec:commons-codec:1.11'
-	compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    implementation 'commons-cli:commons-cli:1.4'
+    implementation 'commons-codec:commons-codec:1.11'
 
-    compile 'com.payneteasy:ber-tlv:1.0-8'
-    compile 'org.slf4j:slf4j-api:1.8+'
-    compile 'ch.qos.logback:logback-classic:1.3+'
+    implementation 'com.payneteasy:ber-tlv:1.0-8'
+    implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
-    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
+    implementation 'org.xerial:sqlite-jdbc:3.32.3.2'
 
-    testCompile 'org.bouncycastle:bcprov-jdk15on:1.64+'
-    testCompile 'org.bouncycastle:bcprov-ext-jdk15on:1.64+'
-    testCompile 'org.bouncycastle:bcpkix-jdk15on:1.64+'
+    testCompile 'org.bouncycastle:bcprov-jdk15on:1.66'
+    testCompile 'org.bouncycastle:bcprov-ext-jdk15on:1.66'
+    testCompile 'org.bouncycastle:bcpkix-jdk15on:1.66'
 
     testCompile 'commons-cli:commons-cli:1.4'
     testCompile 'commons-codec:commons-codec:1.11'
     testCompile 'com.payneteasy:ber-tlv:1.0-8'
-    testCompile 'org.slf4j:slf4j-api:1.8+'
-    testCompile 'ch.qos.logback:logback-classic:1.3+'
+    testCompile 'org.slf4j:slf4j-api:2.0.0-alpha1'
+    testCompile 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.1.0'
-    testCompile 'org.junit.jupiter:junit-jupiter-params:5.1.0'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
-    testRuntime 'org.junit.jupiter:junit-jupiter-params:5.1.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.0-RC1'
+    testCompile 'org.junit.jupiter:junit-jupiter-params:5.7.0-RC1'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.7.0-RC1'
+    testRuntime 'org.junit.jupiter:junit-jupiter-params:5.7.0-RC1'
 
-    shadow 'org.bouncycastle:bcprov-jdk15on:1.64'
-    shadow 'org.bouncycastle:bcprov-ext-jdk15on:1.64'
-    shadow 'org.bouncycastle:bcpkix-jdk15on:1.64+'
+    shadow 'commons-cli:commons-cli:1.4'
+    shadow 'org.slf4j:slf4j-api:2.0.0-alpha1'
+    shadow 'org.bouncycastle:bcprov-jdk15on:1.66'
+    shadow 'org.bouncycastle:bcprov-ext-jdk15on:1.66'
+    shadow 'org.bouncycastle:bcpkix-jdk15on:1.66'
 
-    junitXmlToHtml 'org.apache.ant:ant-junit:1.9.7'
-
+    junitXmlToHtml 'org.apache.ant:ant-junit:1.10.8'
 }
 
-// Define the main class for the application jar that will be produced
-/*mainClassName = 'gov.gsa.pivconformance.tools.ConformanceTestRunner'*/
+def getVersion() {
+    String archName = null;
+    File resourcesDir = new File(project.getProjectDir(), 'src/main/resources/gov/gsa/pivconformance/utils')
+    File versionFile = new File(resourcesDir, 'build.version')
+    String buildVersion = versionFile.text
+    return buildVersion.replaceAll(~'/n','')
+}
 
 jar {
-    /*
-    manifest {
-        attributes 'Main-Class': mainClassName
-    }*/
-    println("Runtime dependencies:")
-    doLast {
-     configurations.runtime.each { println it }
+    doFirst {
+    	archiveName = 'gov.gsa.pivconformance.cardlib' + '-' + getVersion() + '.jar'
+        println 'archveName: ' + archiveName
     }
-}
-
-run {
-    if (project.hasProperty("appArgs")) {
-        args Eval.me(appArgs)
+    doLast {
+        configurations.runtime.each { println it }
     }
 }
 
 // because the tests are also modular and we don't muck with the package exported by the library.
 // An alternate approach may be preferable here, but this makes both gradle and the IDEs happy.
 compileTestJava {
-    //javaModule.name = 'gov.gsa.pivconformancetest'
+    String moduleName = "";
+    if(targetCompatibility >= (String) JavaVersion.VERSION_11) {
+        moduleName = 'gov.gsa.pivconformance.cardlib.test'
+        inputs.property("moduleName", moduleName)
+    }
 }
 
 // use junit platform for tests
@@ -145,6 +132,36 @@ test {
 junitPlatform {
 }
 
+compileJava {
+    String moduleName = "";
+    if(targetCompatibility >= (String) JavaVersion.VERSION_11) {
+        moduleName = 'gov.gsa.pivconformance.cardlib'
+        inputs.property("moduleName", moduleName)
+    }
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+        ]
+        classpath = files()
+    }
+}
+
+compileTestJava {
+    String moduleName = "";
+    if(targetCompatibility >= (String) JavaVersion.VERSION_11) {
+        moduleName = 'gov.gsa.pivconformance.cardlib.test'
+        inputs.property("moduleName", moduleName)
+    }
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'org.junit.jupiter.api',
+                '--add-reads', "$moduleName=org.junit.jupiter.api",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+        ]
+        classpath = files()
+    }
+}
 
 // get readable test reports since gradle eats the summary unless there's a failure
 task generateHtmlTestReports {
@@ -153,9 +170,9 @@ task generateHtmlTestReports {
         reportsDir.mkdirs()
 
         ant.taskdef(
-            name: 'junitReport',
-            classname: 'org.apache.tools.ant.taskdefs.optional.junit.XMLResultAggregator',
-            classpath: configurations.junitXmlToHtml.asPath
+                name: 'junitReport',
+                classname: 'org.apache.tools.ant.taskdefs.optional.junit.XMLResultAggregator',
+                classpath: configurations.junitXmlToHtml.asPath
         )
 
         ant.junitReport(todir: "$buildDir/test-results/junit-platform", tofile: "aggregated-test-results.xml") {
@@ -175,49 +192,115 @@ afterEvaluate {
 // when producing a jar that is suitable for distribution using the shadow plugin,
 // this will enbed a version properties file.
 compileJava.doFirst {
-        //options.compilerArgs = ['--add-modules', 'java.smartcardio']
-        def git = org.ajoberstar.grgit.Grgit.open(dir: "${project.rootDir}/..")
-        def commit = git.head()
+    options.compilerArgs = ['--add-modules', 'java.smartcardio']
+    def git = org.ajoberstar.grgit.Grgit.open(dir: "${project.rootDir}/..")
+    def commit = git.head()
 
-        def commitId = commit.abbreviatedId
-        def commitDate = commit.getDate()
-        def buildDate = new Date()
+    def commitId = commit.abbreviatedId
+    def commitDate = commit.getDate()
+    def buildDate = new Date()
 
-        File resourcesDir = new File(project.getProjectDir(), 'src/main/resources/gov/gsa/pivconformance/utils')
-        File propertiesFile = new File(resourcesDir, 'version.properties')
+    File resourcesDir = new File(project.getProjectDir(), 'src/main/resources/gov/gsa/pivconformance/utils')
+    File propertiesFile = new File(resourcesDir, 'version.properties')
+    File versionFile = new File(resourcesDir, 'build.version')
+    String buildVersion = versionFile.text
+    buildVersion = buildVersion.replaceAll(~'/n','')
 
-        // The project may not have any resources, so create the directories and file
-        if(!propertiesFile.exists()) {
-            resourcesDir.mkdirs()
-            propertiesFile.createNewFile()
-        }
-        Properties versionProperties = new Properties()
-        versionProperties.setProperty('git.commit.time', commitDate.format('dd.MM.yy HH.mm.ss'))
-        versionProperties.setProperty('build.time', buildDate.format('dd.MM.yy HH.mm.ss'))
-        versionProperties.setProperty('git.commit.id', commitId)
-        versionProperties.setProperty('build.version', version)
-        versionProperties.store(propertiesFile.newWriter(), null)
+    // The project may not have any resources, so create the directories and file
+    if(!propertiesFile.exists()) {
+        resourcesDir.mkdirs()
+        propertiesFile.createNewFile()
+        versionFile.createNewFile()
+        println 'Creating version and properties files'
+    }
+    Properties versionProperties = new Properties()
+    versionProperties.setProperty('git.commit.time', commitDate.format('dd.MM.yy HH.mm.ss'))
+    versionProperties.setProperty('build.time', buildDate.format('dd.MM.yy HH.mm.ss'))
+    versionProperties.setProperty('git.commit.id', commitId)
+    versionProperties.setProperty('build.version', buildVersion)
+    versionProperties.store(propertiesFile.newWriter(), null)
+    project.version = buildVersion
+    println 'project.version: ' + project.version
+}
+
+extraJavaModuleInfo {
+
+    module("bcprov-jdk15on-1.66.jar", "org.bouncycastle.provider", "1.66") {
+        exports("bcprov.jdk15on")
+    }
+    module("bcprov-ext-jdk15on-1.66.jar", "org.bouncycastle.provider.ext", "1.66") {
+        exports("bcprov.ext-jdk15on")
+    }
+    module("bcpkix-jdk15on-1.66.jar", "org.bouncycastle.pkix", "1.66") {
+        exports("bcpkix.jdk15on")
+    }
+    module("ber-tlv-1.0-8.jar", "com.payneteasy", "1.08") {
+        exports("ber.tlv")
+    }
+    module("hamcrest-core-1.3.jar", "org.hamcrest", "1.3") {
+        exports("hamcrest.core")
+    }
+    module("slf4j-api-2.0.0-alpha1.jar", "org.slf4j", "1.4") {
+        exports("slf4j.api")
+    }
+    module("sqlite-jdbc-3.32.3.2.jar", "org.xerial", "3.32.3.2") {
+        exports("sqlite.jdbc")
+    }
+    module("commons-cli-1.4.jar", "org.apache.commons.cli", "1.4") {
+        exports("org.apache.commons.cli")
+    }
+    module("commons-codec-1.4.jar", "org.apache.commons.codec", "1.11") {
+        exports("org.apache.commons.codec")
+    }
+    module("junit-4.11.jar","org.junit.jupiter", "4.11") {
+        exports("junit")
+    }
+    module("activation-1.1.jar","javax.activation", "1.1") {
+        exports("activation")
+    }
+    module("checker-framework-1.7.0.jar","edu.washington.cs.types.checker", "1.7.0") {
+        exports("checker.framework")
+    }
+
 }
 
 compileJava {
     options.debugOptions.debugLevel = "source,lines,vars"
 }
 
-task getDeps(type: Copy) {
-  from sourceSets.main.runtimeClasspath
-  into 'runtime/'
+task sourceJar(type: Jar, dependsOn: classes) {
+    classifier 'sources'
+    from sourceSets.main.allSource
+}
+
+task copyShadowLibs(type: Copy) {
+    println 'entering cardlib.copyShadowLibs()'
+    from configurations.shadow
+    into '$projectDir/../tools/85b-swing-gui/lib'
+    println 'leaving cardlib.copyShadowLibs()'
+}
+
+shadowJar.dependsOn copyShadowLibs
+
+shadowJar.doFirst {
+    archiveName = 'gov.gsa.pivconformance.cardlib' + '-' + getVersion() + '.jar'
+    println 'archveName: ' + archiveName
 }
 
 task installSource(type: Copy) {
+    println 'entering cardlib.installSource()'
+    dependsOn copyShadowLibs
     dependsOn sourceJar
     from sourceJar
     into "$projectDir/../tools/85b-swing-gui/lib"
+    println 'leaving cardlib.installSource()'
 }
 
 task install(type: Copy) {
-    dependsOn jar 
+    println 'entering cardlib.install()'
+    dependsOn jar
     dependsOn installSource
     from jar
     into "$projectDir/../tools/85b-swing-gui/lib"
+    println 'leaving cardlib.install()'
 }
-
